<resources>
    <string name="app_name">1Krypt</string>
    <string name="generate_krypt_code">Generate Krypt Code</string>
    <string name="krypt_code_content">Note: When you set set up an additional code, a lock icon will appear on the chats page. Tap generate krypt code button and generate your code for your app</string>
    <string name="create_password">Create Password</string>
    <string name="enter_password">Enter Password</string>
    <string name="enter_your_password">Enter Your Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="submit">Submit</string>
    <string name="login">Login</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="all_chats">All Chats</string>
    <string name="search">Search</string>
    <string name="gallery">Gallery</string>
    <string name="media">Media</string>
    <string name="status">Status</string>
    <string name="account">Accounts</string>
    <string name="phone_number">Phone Number</string>
    <string name="phone">Phone</string>
    <string name="available">Available</string>
    <string name="about">About</string>
    <string name="notifications">Notifications</string>
    <string name="on">On</string>
    <string name="off">Off</string>
    <string name="add_member">Add member</string>
    <string name="saved">Saved</string>
    <string name="krypt_code">Krypt Code</string>
    <string name="demo_user_name">Abdul Waris</string>
    <string name="video">Video</string>
    <string name="image">Image</string>
    <string name="documents">Documents</string>
    <string name="demo_date">20/05/19</string>
    <string name="currently">Currently</string>
    <string name="choose_any_one">Choose any one</string>
    <string name="busy">Busy</string>
    <string name="in_a_meeting">In a meeting</string>
    <string name="at_work">At work</string>
    <string name="phone_state_permission_required">App requires phone state permission to proceed</string>
    <string name="invalid_password">Please enter a valid password</string>
    <string name="passwords_do_not_match">Passwords do not match</string>
    <string name="invalid_krypt_code">Please enter a valid krypt code</string>
    <string name="demo_size">32.5Kb</string>
    <string name="demo_file_type">.PPTX</string>
    <string name="demo_file_name">Slider_file.pptx</string>
    <string name="demo_file_date">5/16/20</string>
    <string name="waiting">WAITING...</string>
    <string name="enter_krypt_code">Enter Krypt Code</string>
    <string name="no_internet_connection">No Internet Connection.. Please Try Again..</string>
    <string name="time_out_error">TimeOut Error Please Try Again..</string>
    <string name="session_expired">Session Expired. Login to continue</string>
    <string name="server_error">Server Error.. Please Try Again..</string>
    <string name="network_error">Network Error.. Please Try Again..</string>
    <string name="parsing_error">Parse Error.. Please Try Again..</string>
    <string name="permission_failed_error">You failed to give some permission, You can enable it in settings to proceed further.</string>
    <string name="voice_call">Voice Call</string>
    <string name="video_call">Video Call</string>
    <string name="connected">Connected</string>
    <string name="new_group">Create New Group</string>
    <string name="my_contact">My Contacts</string>
    <string name="new_message">New Message</string>
    <string name="change_chat_color">Change Chat Color</string>
    <string name="hello">Hello</string>
    <string name="hi_how">Hi how r u?</string>
    <string name="example_time">2:30 PM</string>
    <string name="pick_color_sender">Pick a Color For Sender Bubble</string>
    <string name="pick_color_receiver">Pick a Color For Receiver Bubble</string>
    <string name="add_contact">Add to Contact</string>
    <string name="enter_contact_name">Name</string>
    <string name="camera">Camera</string>
    <string name="audio">Audio</string>
    <string name="record">Record</string>
    <string name="document">Document</string>
    <string name="enter_valid_contact_name">Please enter a valid contact name</string>
    <string name="enter_valid_krypt_name">Please enter a valid krypt name</string>
    <string name="choose_your_option">Choose your option</string>
    <string name="storage_permission_error">You need to give permission to open storage</string>
    <string name="camera_permission_error">You need to give permission to open camera</string>
    <string name="audio_permission_error">You need to give permission to record audio</string>
    <string name="audio_permission_success">You record audio permission granted</string>
    <string name="unable_to_select">Unable to select image</string>
    <string name="unable_to_retrieve">Unable to retrieve image</string>
    <string name="yesterday">Yesterday</string>
    <string name="today">Today</string>
    <string name="online">Online</string>
    <string name="typing">typing...</string>
    <string name="last_seen_at">Last seen at \u0020</string>
    <string name="clear_chat">Clear chat</string>
    <string name="you">You</string>
    <string name="send_a_image">📷 Image</string>
    <string name="send_a_video">📹 Video</string>
    <string name="send_a_file">📄 File</string>
    <string name="send_a_audio">🔈 Audio</string>
    <string name="send_audio">🔈 Send audio</string>
    <string name="image_smile">📷 Image</string>
    <string name="video_smile">📹 Video</string>
    <string name="contact_smile">👤 Contact</string>
    <string name="audio_smile">🔈 Audio</string>
    <string name="location_smile">📌 Location</string>
    <string name="document_smile">📄 Document</string>
    <string name="sticker_smile">🔖 sticker</string>
    <string name="choose_photo">Choose Photo</string>
    <string name="take_photo">Take Photo</string>
    <string name="upload_from_gallery">Upload from Gallery</string>
    <string name="remove_photo">Remove photo</string>
    <string name="choose_group_type">Choose Group type</string>
    <string name="private_text">Private</string>
    <string name="general">General</string>
    <string name="cancel">Cancel</string>
    <string name="add_people">Add people</string>
    <string name="enter_group_name">Enter group name</string>
    <string name="you_deleted_the_message">You deleted the message</string>
    <string name="edit_name">Edit Name</string>
    <string name="add_to_contacts">Add to contacts</string>
    <string name="file_size_limit_exceeded">File size is too large</string>
    <string name="duress_password">Duress Password</string>
    <string name="vault_password">Vault Password</string>
    <string name="retype_login_password">Invalid Login Confirm Password</string>
    <string name="retype_duress_password">Invalid Duress Confirm Password</string>
    <string name="retype_vault_password">Invalid Vault Confirm Password</string>
    <string name="not_same">Use different password for vault, duress and login</string>
    <string name="members">members</string>
    <string name="are_you_sure_to_remove_the_user">Are you sure to remove the user?</string>
    <string name="ok_remove">Ok,Remove</string>
    <string name="no_cancel">No,Cancel</string>
    <string name="message_from">Message From </string>
    <string name="delete">Delete</string>
    <string name="delete_chat_with">Delete chat with</string>
    <string name="are_you_sure_want_to_delete_this_nchat">Are you sure want to delete this \nchat?</string>
    <string name="delete_media_in_this_chat">Delete media in this chat</string>
    <string name="settings">Settings</string>
    <string name="change_password">Change password</string>
    <string name="burn_message">Burn Message</string>
    <string name="_1_month">1 Month</string>
    <string name="_3_months">3 Months</string>
    <string name="_1_year">1 Year</string>
    <string name="block">Block</string>
    <string name="turn_off_wifi">Turn off Wifi</string>
    <string name="try_again">try Again</string>
    <string name="please_turn_on_your_ncellular_network_to_proceed_further">Please turn on your \ncellular network to proceed further</string>
    <string name="blocked_contacts">Blocked Contacts</string>
    <string name="auto_logout">Auto Logout</string>
    <string name="unblock">Unblock</string>
    <string name="you_blocked_the_contact_unblock_to_send_messages">You blocked the contact.Unblock to send Messages</string>
    <string name="password_length_should_be_eight_characters">length must have atleast 11 character !!</string>
    <string name="password_should_contain_atleast_one_special_character">must have atleast one special character !!</string>
    <string name="password_should_contain_atleast_one_uppercase_character">must have atleast one uppercase character !!</string>
    <string name="password_should_contain_atleast_one_numeric">must have atleast one numeric character !!</string>
    <string name="password">Password</string>
    <string name="delete_all_chat">Delete all chat</string>
    <string name="are_you_sure_delete_all_the_nchat_messages">Are you sure delete all the chat messages?</string>
    <string name="hours">hours</string>
    <string name="minutes">minutes</string>
    <string name="days">days</string>
    <string name="done">Done</string>
    <string name="change_theme">Change theme</string>
    <string name="change_chat_theme">Change Chat theme</string>
    <string name="type_message">Type Message</string>
    <string name="light_theme">Light theme</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="seconds">Seconds</string>
    <string name="label_txt_msg_notification">You have message to read</string>
    <string name="capture_button_alt">Capture</string>
    <string name="switch_camera_button_alt">Switch camera</string>
    <string name="gallery_button_alt">Gallery</string>
    <string name="back_button_alt">Back</string>
    <string name="share_button_alt">Share</string>
    <string name="share_hint">Share using</string>
    <string name="capture_mode_camera">Camera</string>
    <string name="capture_mode_hdr">HDR</string>
    <string name="capture_mode_night">Night</string>
    <string name="delete_button_alt">Delete</string>
    <string name="delete_dialog">Delete current photo?</string>
    <string name="delete_video">Delete current video?</string>
    <string name="delete_username">Are you sure to delete the contact?</string>
    <string name="delete_title">Confirm</string>
    <string name="menu_delete">Delete</string>
    <string name="send">Send</string>
    <string name="PF_toast_auotlock">Seconds should be greater than 20 </string>
    <string name="forward">Forward</string>
    <string name="delete_contact">Delete Contact</string>
    <string name="are_you_sure_want_to_delete_the_contact">Are you sure want to delete the contact?</string>
    <string name="missedCall">Missed call</string>
    <string name="slide_to_cancel">"Slide to cancel"</string>
    <string name="app_info">"A WhatsApp style audio recording view to send voice notes in chat.\nHold the Mic to record, then slide left to cancel or swipe up to Lock and record.\n\nCredit:\nVarun John\nhttps://github.com/varunjohn\nvarunjohn1990@gmail.com"</string>
    <string name="type_a_message">Type your message here</string>
    <string name="create_room">Create room</string>
    <string name="msg_connection_error">Connection error, please check the network settings or make sure channel name/access token are valid</string>
    <string name="indian_rupee_sign">\u20B9</string>
    <string name="ampersand_sign">\u0026</string>
    <string name="pound_sign">\u00A3</string>
    <string name="currency_sign">\u00A4</string>
    <string name="cancel_sign">\u0018</string>
    <string name="keyboard_key_enter">\u2192</string>
    <string name="keyboard_key_caps_key_idle">\u21E7</string>
    <string name="keyboard_key_caps_key_selected">\u21EA</string>
</resources>