<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?page_default_bg"
    android:padding="@dimen/_20sdp"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_regular"
        android:text="@string/delete_chat_with"
        android:textColor="?toolbar_text_color"
        android:textSize="@dimen/_14sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/jost_regular"
        android:layout_marginTop="10dp"
        android:lineSpacingExtra="5dp"
        android:text="@string/are_you_sure_want_to_delete_this_nchat"
        android:textColor="?toolbar_text_color"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:backgroundTint="@color/white"
        android:buttonTint="@color/colorPrimary"
        android:paddingStart="@dimen/_10sdp"
        android:text="@string/delete_media_in_this_chat"
        android:fontFamily="@font/jost_regular"
        android:textSize="@dimen/_11sdp"
        android:textColor="?text_color_content"
        app:layout_constraintStart_toStartOf="@+id/content"
        app:layout_constraintTop_toBottomOf="@+id/content"
        tools:ignore="RtlSymmetry" />

    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/jost_regular"
        android:layout_marginEnd="@dimen/_20sdp"
        android:text="@string/cancel"
        android:textColor="?toolbar_text_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <TextView
        android:id="@+id/delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_10sdp"
        android:fontFamily="@font/jost_regular"
        android:text="@string/delete"
        android:textColor="@color/red_color"
        android:textSize="@dimen/_12sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

</androidx.constraintlayout.widget.ConstraintLayout>