<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?dialog_bg">

    <ImageView
        android:id="@+id/backIcon"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_20sdp"
        android:layout_margin="@dimen/_10sdp"
        android:src="@drawable/ic_clear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/createPasswordTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:text="@string/add_contact"
        android:theme="@style/DialogTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/backIcon" />

    <EditText
        android:id="@+id/enterKrypt"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@drawable/round_black_btn_bg"
        android:enabled="false"
        android:hint="@string/enter_krypt_code"
        android:imeOptions="flagNoPersonalizedLearning"
        android:paddingStart="@dimen/_11sdp"
        android:theme="@style/EditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createPasswordTitle" />

    <EditText
        android:id="@+id/contactName"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:background="@drawable/round_black_btn_bg"
        android:hint="@string/enter_contact_name"
        android:imeOptions="flagNoPersonalizedLearning"
        android:paddingStart="@dimen/_11sdp"
        android:theme="@style/EditTextStyle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterKrypt" />

    <TextView
        android:id="@+id/submitButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/_25sdp"
        android:layout_marginTop="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_25sdp"
        android:layout_marginBottom="@dimen/_20sdp"
        android:background="@drawable/round_yellow_btn_bg"
        android:text="@string/submit"
        android:theme="@style/ButtonStyle"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/contactName" />


</androidx.constraintlayout.widget.ConstraintLayout>