<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:cardCornerRadius="10dp"
    android:elevation="2dp"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/title2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:layout_marginStart="@dimen/_13sdp"
            android:layout_marginBottom="@dimen/_3sdp"
            android:fontFamily="@font/roboto_regular_font"
            android:text="@string/are_you_sure_to_remove_the_user"
            android:textColor="@color/text_color_heading"
            android:textSize="@dimen/_12sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/roboto_medium_font"
            android:text="@string/ok_remove"
            android:alpha="0.8"
            android:textColor="@color/red_color"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/title2" />

        <TextView
            android:id="@+id/cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:fontFamily="@font/roboto_medium_font"
            android:text="@string/no_cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/_11sdp"
            app:layout_constraintEnd_toStartOf="@+id/ok"
            app:layout_constraintTop_toBottomOf="@+id/title2" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>