<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="?page_default_bg">

    <TextView
        android:id="@+id/choosePhotoTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="?mediumFont"
        android:text="@string/choose_photo"
        android:textColor="?dialog_text_color"
        android:textSize="@dimen/_13sdp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="@dimen/_12sdp"
        android:id="@+id/cameraIcon"
        android:src="@drawable/ic_camera_icon"
        app:layout_constraintTop_toTopOf="@id/takePhotoText"
        app:layout_constraintBottom_toBottomOf="@id/takePhotoText"
        android:tint="?dialog_icon_color"
        app:layout_constraintStart_toStartOf="@id/choosePhotoTitle"
        android:layout_height="@dimen/_12sdp"/>

    <TextView
        android:id="@+id/takePhotoText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="?regularFont"
        android:text="@string/take_photo"
        android:textColor="?dialog_text_color"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/choosePhotoTitle"
        app:layout_constraintStart_toEndOf="@id/cameraIcon"
        />


    <ImageView
        android:layout_width="@dimen/_12sdp"
        android:id="@+id/galleryIcon"
        android:src="@drawable/ic_gallery_icon"
        app:layout_constraintTop_toTopOf="@id/galleryText"
        app:layout_constraintBottom_toBottomOf="@id/galleryText"
        android:tint="?dialog_icon_color"
        app:layout_constraintStart_toStartOf="@id/choosePhotoTitle"
        android:layout_height="@dimen/_12sdp"/>

    <TextView
        android:id="@+id/galleryText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="?regularFont"
        android:text="@string/upload_from_gallery"
        android:textColor="?dialog_text_color"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/takePhotoText"
        app:layout_constraintStart_toEndOf="@id/galleryIcon"
        />


    <ImageView
        android:layout_width="@dimen/_12sdp"
        android:id="@+id/trashIcon"
        android:src="@drawable/delete_icon"
        app:layout_constraintTop_toTopOf="@id/trashText"
        app:layout_constraintBottom_toBottomOf="@id/trashText"
        android:tint="?negative_text_color"
        app:layout_constraintStart_toStartOf="@id/choosePhotoTitle"
        android:layout_height="@dimen/_12sdp"/>

    <TextView
        android:id="@+id/trashText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_10sdp"
        android:layout_marginTop="@dimen/_15sdp"
        android:fontFamily="?regularFont"
        android:text="@string/remove_photo"
        android:textColor="?negative_text_color"
        android:textSize="@dimen/_11sdp"
        app:layout_constraintTop_toBottomOf="@id/galleryText"
        app:layout_constraintStart_toEndOf="@id/trashIcon"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="@dimen/_15sdp"
        />


</androidx.constraintlayout.widget.ConstraintLayout>