<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/transparent">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_20sdp"
        app:cardBackgroundColor="?dialog_bg"
        app:cardCornerRadius="@dimen/_20sdp"
        app:cardElevation="0dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/createPasswordTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginStart="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/add_contact"
                android:theme="@style/DialogTitle" />

            <EditText
                android:id="@+id/enterKrypt"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/createPasswordTitle"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/edit_text_bg_two"
                android:hint="@string/enter_krypt_code"
                android:imeOptions="flagNoPersonalizedLearning|actionNext"
                android:maxLines="1"
                android:paddingLeft="@dimen/_11sdp"
                android:paddingRight="@dimen/_11sdp"
                android:theme="@style/EditTextStyle" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/contactName"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/enterKrypt"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:background="@drawable/edit_text_bg_two"
                android:hint="@string/enter_contact_name"
                android:imeOptions="flagNoPersonalizedLearning|actionDone"
                android:maxLines="1"
                android:paddingLeft="@dimen/_11sdp"
                android:paddingRight="@dimen/_11sdp"
                android:theme="@style/EditTextStyle" />

            <Button
                android:id="@+id/submitButton"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_35sdp"
                android:layout_below="@id/contactName"
                android:layout_marginLeft="@dimen/_25sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginRight="@dimen/_25sdp"
                android:layout_marginBottom="@dimen/_20sdp"
                android:background="@drawable/round_yellow_btn_bg"
                android:gravity="center"
                android:text="@string/submit"
                android:theme="@style/ButtonStyle" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>

    <RelativeLayout
        android:id="@+id/backIcon"
        android:layout_width="@dimen/_15sdp"
        android:layout_height="@dimen/_15sdp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="@dimen/_13sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:background="@drawable/black_oval_background">

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_centerInParent="true"
            android:padding="@dimen/_2sdp"
            android:src="@drawable/ic_clear" />

    </RelativeLayout>
</RelativeLayout>
